[project]
name = "llama-quant-benchmark"
version = "1.0.0"
description = "Benchmark LLaMA model quantizations using llama-bench"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "numpy>=2.4.2",
    "sentencepiece>=0.2.1",
    "gguf",
    "mistral-common>=1.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
gguf = { git = "https://github.com/ggerganov/llama.cpp.git", subdirectory = "gguf-py" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
addopts = "-v --strict-markers --tb=short --cov=llama_quant_bench --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:.coverage.xml --cov-branch"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
xfail_strict = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
strict_optional = true
extra_checks = true

[[tool.mypy.overrides]]
module = "llama_quant_bench"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "C90", # mccabe (complexity)
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "COM812", # Trailing comma on multi-line (conflicts with formatter)
    "S101",   # Use of assert detected (normal in pytest)
    "S603",   # subprocess call: check for execution of untrusted input
    "TD003",  # Missing issue link for TODO
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 10
max-branches = 15
max-returns = 10
max-statements = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"] # Magic value comparisons are OK in tests

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.pyright]
pythonVersion = "3.13"
include = ["tests", "llama_quant_bench.py"]
exclude = [".venv", "__pycache__", ".git", ".pytest_cache"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = true
reportUntypedFunctionDecorator = true
reportInvalidTypeForm = true
reportMissingImports = true
reportMissingModuleSource = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportUntypedClassDecorator = true
reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportMissingTypeArgument = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportGeneralTypeIssues = true
